my-apps/homepage-dashboard/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homepage-dashboard
spec:
  parentRefs:
    - name: gateway-internal
      namespace: gateway
  hostnames:
  - "homepage.wiredgateway.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: homepage-dashboard
      port: 3000
